crates/apollo-compiler/test_data/diagnostics/0026_interface_definition_with_missing_implemetns_interface.txt
Error: interface `Image` declares that it implements `Resource`, but to do so it must also implement `Node`
    ╭─[0026_interface_definition_with_missing_implemetns_interface.graphql:15:1]
    │
  9 │     interface Resource implements Node {
    │                                   ──┬─  
    │                                     ╰─── implementation of Node declared by Resource here
    │ 
 15 │ ╭─▶ interface Image implements Resource {
    ┆ ┆   
 20 │ ├─▶ }
    │ │      
    │ ╰────── Node must also be implemented here
────╯

